<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">HABPanelViewer</string>
    <string name="app_logo" translatable="false">App Logo</string>
    <string name="intro_urlNotFound">correct URL has not been found. I will edit the URL in the preferences.</string>
    <string name="action_startApp">Start App</string>
    <string name="action_info">Status Information</string>
    <string name="action_help">Help</string>
    <string name="action_restart">Restart</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_cmdLog">Command Log</string>
    <string name="menu_reload">Reload page</string>
    <string name="menu_gotoStartUrl">Go to start page</string>
    <string name="menu_gotoUrl">Go to URL…</string>
    <string name="menu_setStartUrl">Set as start page</string>
    <string name="menu_clearCredentials">Clear stored credentials</string>
    <string name="menu_clearCache">Clear cache</string>
    <string name="menu_toggleKiosk">Toggle Kiosk Mode</string>
    <string name="pref_connection">Connection</string>
    <string name="pref_url" translatable="false">openHAB URL</string>
    <string name="pref_url_summ">URL of the openHAB server. To start server discovery use the main menu</string>
    <string name="pref_startUrl">Start page</string>
    <string name="pref_startUrl_summ">The page to load on start. If empty, the openHAB URL is used as start page</string>
    <string name="pref_trackBrowserConnection">Track Browser Connection</string>
    <string name="pref_trackBrowserConnection_summ">Reconnects to openHAB when a browser SSE connection loss is detected</string>
    <string name="pref_ui">User Interface</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_summ">The theme to use for the app. A restart is required for a change to take effect</string>
    <string name="pref_menuPosition">Menu Position</string>
    <string name="pref_menuPosition_summ">The side from which the main menu can be pulled out</string>
    <string name="pref_showContextMenu">Show Context Menu</string>
    <string name="pref_showContextMenu_summ">Show Context Menu when doing a long press on the browser</string>
    <string name="pref_preventDragging">Prevent Dragging</string>
    <string name="pref_preventDragging_summ">Prevents dragging in the WebView. This effectively disables scrolling and might also disable the pull-out of the HABPanel menu</string>
    <string name="pref_showOnLockScreen">Show on lock screen</string>
    <string name="pref_showOnLockScreen_summ">Whether the app shall be shown on the lock screen</string>
    <string name="pref_immersive">Hide Soft Keys</string>
    <string name="pref_immersive_summ">Hides the soft keys when the browser is visible</string>
    <string name="pref_other">Miscellaneous</string>
    <string name="pref_browser">Browser</string>
    <string name="pref_desktopMode">Desktop mode</string>
    <string name="pref_desktopMode_summ">Show pages in desktop mode instead of mobile mode</string>
    <string name="pref_javascript">Enable Javascript</string>
    <string name="pref_javascript_summ">Enables Javascript in the WebView</string>
    <string name="pref_allowMixedContent">Allow mixed content</string>
    <string name="pref_allowMixedContent_summ">Allows http content in https pages</string>
    <string name="pref_hardwareAccelerated">Use hardware acceleration</string>
    <string name="pref_hardwareAccelerated_summ">HW acceleration uses more resources and might make the app unstable. Please disable in case of crashes</string>
    <string name="pref_disableCache">Disable browser cache</string>
    <string name="pref_disableCache_summ">Forces loading of every resource from the server</string>
    <string name="pref_loadStartUrlOnScreenOn">Show Start page on wakeup</string>
    <string name="pref_loadStartUrlOnScreenOn_summ">Shows the start page when the device is turned on</string>
    <string name="pref_pauseWebview">Pause webview when screen is off</string>
    <string name="pref_pauseWebview_summ">Enable this if the device is unresponsive after it has been turned on</string>
    <string name="pref_autoplayVideo">Allow video autoplay</string>
    <string name="pref_autoplayVideo_summ">Allows the browser to start videos without user interaction</string>
    <string name="pref_logBrowserMsgs">Log browser messages</string>
    <string name="pref_logBrowserMsgs_summ">Writes browser console messages to the system log</string>
    <string name="pref_allowWebrtc">Allow WebRTC</string>
    <string name="pref_allowWebrtc_summ">Allow video and audio recording for WebRTC</string>
    <string name="pref_commandItem">Command Item</string>
    <string name="pref_commandItem_summ">Name of the Item that is used by openHAB to send commands to HABPanelViewer</string>
    <string name="pref_reporting">Value Reporting</string>
    <string name="pref_reporting_summ">Report device sensor values or other things to openHAB</string>
    <string name="pref_sensors">Sensors</string>
    <string name="pref_proximity">Proximity Sensor</string>
    <string name="pref_proximityItem_summ">Name of the contact item whose state shall be set depending on the proximity sensor</string>
    <string name="pref_brightness">Brightness Sensor</string>
    <string name="pref_pressure">Pressure Sensor</string>
    <string name="pref_temperature">Temperature Sensor</string>
    <string name="pref_sensorIntervall">Update intervall</string>
    <string name="pref_sensorIntervall_summ">The number of seconds to collect sensor readings until an averaged update is sent to openHAB</string>
    <string name="pref_noiseLevelEnabled">Monitor noise level using the device microphone and report changes to openHAB</string>
    <string name="pref_noiseLevelEnabled_summ">Allows to set the state of an openHAB item depending on the surrounding noise level</string>
    <string name="pref_noiseLevelItem">Noise Level Item</string>
    <string name="pref_noiseLevelItem_summ">Name of the number item whose state shall be set when the noise level changes</string>
    <string name="pref_battery">Battery</string>
    <string name="pref_batteryEnabled">Monitor device battery state and report changes to openHAB</string>
    <string name="pref_batteryEnabled_summ">Allows to set the states of openHAB items depending on the device battery status</string>
    <string name="pref_batteryItem">Battery Low Contact</string>
    <string name="pref_batteryItem_summ">Name of the contact item whose state shall be set when battery is low/not low</string>
    <string name="pref_batteryChargingItem">Battery Charging Contact</string>
    <string name="pref_batteryChargingItem_summ">Name of the contact item whose state shall be set when battery is charged/not charged</string>
    <string name="pref_batteryLevelItem">Battery Level Item</string>
    <string name="pref_batteryLevelItem_summ">Name of the number item whose state shall be set when the battery level changes</string>
    <string name="pref_batteryTempItem">Battery Temperature Item</string>
    <string name="pref_batteryTempItem_summ">Name of the number item whose state shall be set when the battery temperature changes</string>
    <string name="pref_motion">Motion Detection</string>
    <string name="pref_motionEnabled">Motion Detection</string>
    <string name="pref_motionEnabled_summ">Toggle openHAB contact item when motion is detected</string>
    <string name="pref_motionItem">Motion Contact</string>
    <string name="pref_motionItem_summ">Name of the contact item whose state shall be set motion has been detected</string>
    <string name="pref_motionDetectionGranularity">Detection granularity</string>
    <string name="pref_motionDetectionGranularity_summ">The number of rectangles per axis the image is divided into to detect changes</string>
    <string name="pref_motionDetectionTimeout">Detection timeout</string>
    <string name="pref_motionDetectionTimeout_summ">The number of seconds without motion until the contact is opened</string>
    <string name="pref_motionDetectionLeniency">Detection leniency</string>
    <string name="pref_motionDetectionLeniency_summ">Threshold of changed pixels in a single detection are that triggers motion</string>
    <string name="pref_motionDetectionSleep">Detection interval</string>
    <string name="pref_motionDetectionSleep_summ">Time to sleep between consecutive detection attempts in ms</string>
    <string name="pref_connectionIndicators">Connection Indicators</string>
    <string name="pref_startupEnabled">Enabled</string>
    <string name="pref_startupEnabled_summ">Allows to update an openHAB item with the app start time</string>
    <string name="pref_startupItem">Startup Item</string>
    <string name="pref_startupItem_summ">Name of the datetime item whose state shall be set on app start</string>
    <string name="pref_connectedEnabled">Enabled</string>
    <string name="pref_connectedEnabled_summ">Allows to periodically update an openHAB item with the current time as a connector indicator</string>
    <string name="pref_connectedItem">Connected Item</string>
    <string name="pref_connectedItem_summ">Name of the datetime item whose state shall be set</string>
    <string name="pref_connectedInterval">Update interval</string>
    <string name="pref_connectedInterval_summ">The number of seconds between subsequent state updates</string>
    <string name="pref_volume">Volume</string>
    <string name="pref_usage">Usage</string>
    <string name="pref_usageEnabled">Toggle openHAB contact item when the app is actively used</string>
    <string name="pref_usageEnabled_summ">Allows to set the state of an openHAB items depending on the app usage</string>
    <string name="pref_usageItem">Usage Contact</string>
    <string name="pref_usageItem_summ">Name of the contact item whose state shall be set depending on the app usage</string>
    <string name="pref_usageTimeout">Usage timeout</string>
    <string name="pref_usageTimeout_summ">Number of seconds after which usage times out</string>
    <string name="pref_screen">Screen</string>
    <string name="pref_dockingState">Docking State</string>
    <string name="pref_accelerometer">Accelerometer</string>
    <string name="pref_accelerometerEnabled">Enabled</string>
    <string name="pref_accelerometerEnabled_summ">Monitor device movement and report changes to openHAB</string>
    <string name="pref_accelerometerItem">Accelerometer Item</string>
    <string name="pref_accelerometerSensitivity">Accelerometer Sensitivity</string>
    <string name="pref_accelerometerSensitivity_summ">Sensitivity of the movement detection</string>
    <string name="pref_camera">Camera</string>
    <string name="pref_cameraNewApi">Use Lollipop camera API</string>
    <string name="pref_cameraNewApi_summ">Use Camera API 2 introduced with Lollipop. Only uncheck this if it does not work. On change, a restart will be performed when you exit the preferences</string>
    <string name="pref_cameraPreview">Camera Preview</string>
    <string name="pref_cameraPreview_summ">Shows a camera preview overlay</string>
    <string name="pref_takePicDelay">CAPTURE_CAMERA delay</string>
    <string name="pref_takePicDelay_summ">Delay in milliseconds to wait after preview has been started until taking the picture for CAPTURE_CAMERA commands.</string>
    <string name="pref_jpegQuality">JPEG Quality</string>
    <string name="pref_jpegQuality_summ">JPEG compression quality</string>
    <string name="pref_cameraFallback">Fall back to back facing camera</string>
    <string name="pref_cameraFallback_summ">Uses the back facing camera in case the front facing camera can not be opened</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="storeCredentials">Store credentials</string>
</resources>