<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_browser"
    android:title="@string/pref_browser">

    <CheckBoxPreference
        android:key="pref_load_start_url_on_screenon"
        android:defaultValue="false"
        android:summary="@string/pref_loadStartUrlOnScreenOn_summ"
        android:title="@string/pref_loadStartUrlOnScreenOn" />
    <CheckBoxPreference
        android:key="pref_pause_webview"
        android:defaultValue="false"
        android:summary="@string/pref_pauseWebview_summ"
        android:title="@string/pref_pauseWebview" />
    <CheckBoxPreference
        android:key="pref_desktop_mode"
        android:defaultValue="false"
        android:summary="@string/pref_desktopMode_summ"
        android:title="@string/pref_desktopMode" />
    <CheckBoxPreference
        android:key="pref_javascript"
        android:defaultValue="true"
        android:summary="@string/pref_javascript_summ"
        android:title="@string/pref_javascript" />
    <CheckBoxPreference
        android:key="pref_allow_mixed_content"
        android:defaultValue="false"
        android:summary="@string/pref_allowMixedContent_summ"
        android:title="@string/pref_allowMixedContent" />
    <CheckBoxPreference
        android:key="pref_disable_cache"
        android:defaultValue="false"
        android:summary="@string/pref_disableCache_summ"
        android:title="@string/pref_disableCache" />
    <CheckBoxPreference
        android:key="pref_hardware_accelerated"
        android:defaultValue="false"
        android:summary="@string/pref_hardwareAccelerated_summ"
        android:title="@string/pref_hardwareAccelerated" />
    <CheckBoxPreference
        android:key="pref_autoplay_video"
        android:defaultValue="false"
        android:summary="@string/pref_autoplayVideo_summ"
        android:title="@string/pref_autoplayVideo" />
    <CheckBoxPreference
        android:key="pref_log_browser_messages"
        android:defaultValue="false"
        android:summary="@string/pref_logBrowserMsgs_summ"
        android:title="@string/pref_logBrowserMsgs" />
    <CheckBoxPreference
        android:key="pref_allow_webrtc"
        android:defaultValue="false"
        android:summary="@string/pref_allowWebrtc_summ"
        android:title="@string/pref_allowWebrtc" />

</PreferenceScreen>