<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    android:persistent="false"
    android:title="@string/pref_ui">

    <ListPreference
        android:key="pref_theme"
        android:entries="@array/themes"
        android:defaultValue="dark"
        android:entryValues="@array/themeIds"
        android:summary="@string/pref_theme_summ"
        android:title="@string/pref_theme" />
    <ListPreference
        android:key="pref_menu_position"
        android:defaultValue="right"
        android:entries="@array/menupositions"
        android:entryValues="@array/menupositionIds"
        android:summary="@string/pref_menuPosition_summ"
        android:title="@string/pref_menuPosition" />
    <CheckBoxPreference
        android:key="pref_show_context_menu"
        android:defaultValue="true"
        android:summary="@string/pref_showContextMenu_summ"
        android:title="@string/pref_showContextMenu" />
    <CheckBoxPreference
        android:key="pref_show_on_lock_screen"
        android:defaultValue="false"
        android:summary="@string/pref_showOnLockScreen_summ"
        android:title="@string/pref_showOnLockScreen" />
    <CheckBoxPreference
        android:key="pref_immersive"
        android:defaultValue="false"
        android:summary="@string/pref_immersive_summ"
        android:title="@string/pref_immersive" />
    <CheckBoxPreference
        android:key="pref_prevent_dragging"
        android:defaultValue="false"
        android:summary="@string/pref_preventDragging_summ"
        android:title="@string/pref_preventDragging" />

</PreferenceScreen>
