<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="false"
    android:title="@string/pref_reporting">

    <PreferenceCategory
        android:key="pref_sensors"
        android:title="@string/pref_sensors">

        <Preference
            android:key="nested_pref_proximity"
            android:persistent="false"
            android:title="@string/pref_proximity" />

        <Preference
            android:key="nested_pref_brightness"
            android:persistent="false"
            android:title="@string/pref_brightness" />

        <Preference
            android:key="nested_pref_pressure"
            android:persistent="false"
            android:title="@string/pref_pressure" />

        <Preference
            android:key="nested_pref_temperature"
            android:persistent="false"
            android:title="@string/pref_temperature" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_reporting_other"
        android:title="@string/pref_other">

        <Preference
            android:key="nested_pref_motion"
            android:persistent="false"
            android:title="@string/pref_motion" />

        <Preference
            android:key="nested_pref_connected"
            android:persistent="false"
            android:title="@string/pref_connectionIndicators" />

        <Preference
            android:key="nested_pref_battery"
            android:persistent="false"
            android:title="@string/pref_battery" />

        <Preference
            android:key="nested_pref_screen"
            android:persistent="false"
            android:title="@string/pref_screen" />

        <Preference
            android:key="nested_pref_usage"
            android:persistent="false"
            android:title="@string/pref_usage" />

        <Preference
            android:key="nested_pref_volume"
            android:persistent="false"
            android:title="@string/pref_volume" />

        <Preference
            android:key="nested_pref_docking_state"
            android:persistent="false"
            android:title="@string/pref_dockingState" />
    </PreferenceCategory>
</PreferenceScreen>