<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="false"
    android:title="@string/pref_battery">

    <CheckBoxPreference
        android:key="pref_battery_enabled"
        android:defaultValue="false"
        android:summary="@string/pref_batteryEnabled_summ"
        android:title="@string/pref_batteryEnabled" />
    <de.vier_bier.habpanelviewer.preferences.AutocompleteTextPreference
        android:key="pref_battery_item"
        android:dependency="pref_battery_enabled"
        android:inputType="textPhonetic"
        android:summary="@string/pref_batteryItem_summ"
        android:title="@string/pref_batteryItem" />
    <de.vier_bier.habpanelviewer.preferences.AutocompleteTextPreference
        android:key="pref_battery_charging_item"
        android:dependency="pref_battery_enabled"
        android:inputType="textPhonetic"
        android:summary="@string/pref_batteryChargingItem_summ"
        android:title="@string/pref_batteryChargingItem" />
    <de.vier_bier.habpanelviewer.preferences.AutocompleteTextPreference
        android:key="pref_battery_level_item"
        android:dependency="pref_battery_enabled"
        android:inputType="textPhonetic"
        android:summary="@string/pref_batteryLevelItem_summ"
        android:title="@string/pref_batteryLevelItem" />
    <de.vier_bier.habpanelviewer.preferences.AutocompleteTextPreference
        android:key="pref_battery_temp_item"
        android:dependency="pref_battery_enabled"
        android:inputType="textPhonetic"
        android:summary="@string/pref_batteryTempItem_summ"
        android:title="@string/pref_batteryTempItem" />

</PreferenceScreen>