<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="false"
    android:title="@string/pref_usage">

    <CheckBoxPreference
        android:key="pref_usage_enabled"
        android:defaultValue="false"
        android:summary="@string/pref_usageEnabled_summ"
        android:title="@string/pref_usageEnabled" />
    <de.vier_bier.habpanelviewer.preferences.AutocompleteTextPreference
        android:key="pref_usage_item"
        android:dependency="pref_usage_enabled"
        android:inputType="textPhonetic"
        android:summary="@string/pref_usageItem_summ"
        android:title="@string/pref_usageItem" />
    <EditTextPreference
        android:key="pref_usage_timeout"
        android:dependency="pref_usage_enabled"
        android:defaultValue="60"
        android:inputType="number"
        android:summary="@string/pref_usageTimeout_summ"
        android:title="@string/pref_usageTimeout" />

</PreferenceScreen>