<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="false"
    android:title="@string/pref_proximity">

    <CheckBoxPreference
        android:layout_width="wrap_content"
        android:defaultValue="false"
        android:key="pref_noise_level_enabled"
        android:summary="@string/pref_noiseLevelEnabled_summ"
        android:title="@string/pref_noiseLevelEnabled" />
    <de.vier_bier.habpanelviewer.preferences.AutocompleteTextPreference
        android:key="pref_noise_level_item"
        android:dependency="pref_noise_level_enabled"
        android:inputType="textPhonetic"
        android:summary="@string/pref_noiseLevelItem_summ"
        android:title="@string/pref_noiseLevelItem" />
    <EditTextPreference
        android:key="pref_noise_level_intervall"
        android:dependency="pref_noise_level_item"
        android:defaultValue="5"
        android:inputType="number"
        android:summary="@string/pref_sensorIntervall_summ"
        android:title="@string/pref_sensorIntervall" />

</PreferenceScreen>