<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_reload"
        android:title="@string/menu_reload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_toggle_kiosk"
        android:title="@string/menu_toggleKiosk"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_goto_start_url"
        android:title="@string/menu_gotoStartUrl"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_goto_url"
        android:title="@string/menu_gotoUrl"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_set_start_url"
        android:title="@string/menu_setStartUrl"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_clear_credentials"
        android:title="@string/menu_clearCredentials"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_clear_cache"
        android:title="@string/menu_clearCache"
        app:showAsAction="ifRoom" />
</menu>