<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="100"
        android:title="@string/action_preferences"
        android:icon="@drawable/ic_preferences_black_24dp" />
    <item
        android:id="@+id/action_start_app"
        android:orderInCategory="100"
        android:title="@string/action_startApp"
        android:icon="@drawable/ic_play_arrow_black_24dp" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        android:icon="@drawable/ic_info_outline_black_24dp" />
    <item
        android:id="@+id/action_cmd_log"
        android:orderInCategory="100"
        android:title="@string/action_cmdLog"
        android:icon="@drawable/ic_access_time_black_24dp" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        android:icon="@drawable/ic_help_outline_black_24dp" />
    <item
        android:id="@+id/action_intro"
        android:orderInCategory="100"
        android:title="@string/action_intro"
        android:icon="@drawable/ic_ondemand_video_black_24dp" />
    <item
        android:id="@+id/action_restart"
        android:orderInCategory="100"
        android:title="@string/action_restart"
        android:icon="@drawable/ic_replay_black_24dp" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        android:icon="@drawable/ic_power_black_24dp" />
</menu>
